--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,10 @@
         <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+        <script
+            src="https://kit.fontawesome.com/49469fa42f.js"
+            crossorigin="anonymous"
+        ></script>
         <title>Clément Degardenzi Portfolio</title>
     </head>
     <body>
