corrected language and perspective

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
     <head>
         <!-- Basic Metas -->
         <title>Clément Degardenzi Portfolio</title>
