Light mode 1st steps

--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,14 @@
     <head>
         <!-- Basic Metas -->
         <title>Clément Degardenzi Portfolio</title>
-        <meta name="title" content="Clément Degardenzi Portfolio" />
+        <meta name="title" content="Clément Degardenzi" />
         <meta charset="utf-8" />
         <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
         <meta
             name="description"
-            content="Voici le site de portfolio de Clément Degardenzi, musicien interprète depuis 6 ans et également récemment devenu développeur Web avec les techno classiques (HTML, CSS, JS) mais également en React et Redux."
+            content="Voici le site de portfolio de Clément Degardenzi, musicien interprète depuis 7 ans et également récemment devenu développeur Web avec les techno classiques (HTML, CSS, JS) mais également en React et Redux."
         />
 
         <!-- RS Metas -->
